fix: spelling and text align

--- a/src/screens/About/About.css
+++ b/src/screens/About/About.css
@@ -30,7 +30,7 @@
   color: white;
   margin-bottom: 20px;
   animation: fadeIn 4s;
-  text-align: justify;
+  text-align: left;
   background-color: #000000cc;
   border-radius: 10px;
   padding: 10px;
